<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.example</groupId>
	<artifactId>janusgraph-sandbox</artifactId>
	<packaging>pom</packaging>
	<version>1.0-SNAPSHOT</version>
	<modules>
		<module>1_tinkerpop-example</module>
		<module>2_janusgraph-example</module>
		<module>3_ferma-example</module>
	</modules>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<!--		<janusgraph.version>0.6.0-SNAPSHOT</janusgraph.version>-->
		<janusgraph.version>0.5.2</janusgraph.version>
		<tinkergraph.version>3.4.8</tinkergraph.version>
		<ferma.version>3.3.2</ferma.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.syncleus.ferma</groupId>
				<artifactId>ferma</artifactId>
				<version>${ferma.version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.tinkerpop</groupId>
				<artifactId>gremlin-core</artifactId>
				<version>${tinkergraph.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.tinkerpop</groupId>
				<artifactId>gremlin-driver</artifactId>
				<version>${tinkergraph.version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.tinkerpop</groupId>
				<artifactId>tinkergraph-gremlin</artifactId>
				<version>${tinkergraph.version}</version>
			</dependency>

			<dependency>
				<groupId>org.janusgraph</groupId>
				<artifactId>janusgraph-core</artifactId>
				<version>${janusgraph.version}</version>
			</dependency>
			<dependency>
				<groupId>org.janusgraph</groupId>
				<artifactId>janusgraph-berkeleyje</artifactId>
				<version>${janusgraph.version}</version>
			</dependency>
			<dependency>
				<groupId>org.janusgraph</groupId>
				<artifactId>janusgraph-lucene</artifactId>
				<version>${janusgraph.version}</version>
			</dependency>
			<dependency>
				<groupId>org.janusgraph</groupId>
				<artifactId>janusgraph-inmemory</artifactId>
				<version>${janusgraph.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.12</version>
			<scope>provided</scope>
		</dependency>

		<!--перенаправление вызовов slf4j в log4j2 -->
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-slf4j-impl</artifactId>
			<version>2.14.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>2.13.2</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.13.2</version>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>5.7.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest</artifactId>
			<version>2.2</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>